2017-03-02  Tomas Popela  <tpopela@redhat.com>

        Incorrect RELEASE_ASSERT in JSGlobalObject::addStaticGlobals()
        https://bugs.webkit.org/show_bug.cgi?id=169034

        Reviewed by Mark Lam.

        It should not assign to offset, but compare to offset.

        * runtime/JSGlobalObject.cpp:
        (JSC::JSGlobalObject::addStaticGlobals):

2017-02-28  Saam Barati  <sbarati@apple.com>

        Arm64 disassembler prints "ars" instead of "asr"
        https://bugs.webkit.org/show_bug.cgi?id=168923

        Rubber stamped by Michael Saboff.

        * disassembler/ARM64/A64DOpcode.cpp:
        (JSC::ARM64Disassembler::A64DOpcodeBitfield::format):

2017-02-28  Oleksandr Skachkov  <gskachkov@gmail.com>

        Use of arguments in arrow function is slow
        https://bugs.webkit.org/show_bug.cgi?id=168829

        Reviewed by Saam Barati.

        Current patch improves performance access to arguments within arrow functuion
        by preventing create arguments variable within arrow function, also allow to cache 
        arguments variable. Before arguments variable always have Dynamic resolve type, after 
        patch it can be ClosureVar, that increase performance of access to arguments variable
        in 9 times inside of the arrow function. 

        * bytecompiler/BytecodeGenerator.cpp:
        (JSC::BytecodeGenerator::BytecodeGenerator):
        * runtime/JSScope.cpp:
        (JSC::abstractAccess):

2017-03-08  Yusuke Suzuki  <utatane.tea@gmail.com>

        [GTK] JSC test stress/arity-check-ftl-throw.js.ftl-no-cjit-validate-sampling-profiler crashing on GTK bot
        https://bugs.webkit.org/show_bug.cgi?id=160124

        Reviewed by Mark Lam.

        When performing CallVarargs, we will copy values to the stack.
        Before actually copying values, we need to adjust the stackPointerRegister
        to ensure copied values are in the allocated stack area.
        If we do not that, OS can break the values that is stored beyond the stack