@@ -1,3 +1,15 @@
+2017-03-06  Daniel Ehrenberg  <littledan@igalia.com>
+
+        Currency digits calculation in Intl.NumberFormat should call out to ICU
+        https://bugs.webkit.org/show_bug.cgi?id=169182
+
+        Reviewed by Yusuke Suzuki.
+
+        * runtime/IntlNumberFormat.cpp:
+        (JSC::computeCurrencyDigits):
+        (JSC::computeCurrencySortKey): Deleted.
+        (JSC::extractCurrencySortKey): Deleted.
+
 2017-03-02  Tomas Popela  <tpopela@redhat.com>
 
         Incorrect RELEASE_ASSERT in JSGlobalObject::addStaticGlobals()
